feat: Add flutter_inappwebview and webview_flutter plugins
- Updated GeneratedPluginRegistrant.swift to include flutter_inappwebview_macos and webview_flutter_wkwebview.
- Updated pubspec.lock to add flutter_inappwebview and webview_flutter dependencies with their respective versions.
- Updated pubspec.yaml to include flutter_inappwebview and khalti_checkout_flutter dependencies.
- Registered flutter_inappwebview_windows in generated_plugin_registrant.cc and generated_plugins.cmake.
- Added strings.xml for Facebook App ID configuration.
- Added temporary dump of system activity for debugging purposes.