@@ -1,4 +1,5 @@
 // Root project build.gradle.kts file
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 buildscript {
     repositories {
@@ -9,37 +10,28 @@ buildscript {
     dependencies {
         // Add the classpath for the Firebase Google Services plugin
         classpath("com.google.gms:google-services:4.3.15") 
-        
-        
-        
-        
-        
-        
     }    
-        
-        
-        
-        
-        
-        // Firebase plugin
-    
-
-
-
-
-
-
-
-
-
-
-
 }
 
 allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+    
+    // Force all modules to use consistent Java configuration
+    tasks.withType<JavaCompile> {
+        sourceCompatibility = "17"
+        targetCompatibility = "17"
+        // Remove --add-opens flags that cause issues with Java 8 plugins
+    }
+    
+    // Configure Kotlin to use Java 17
+    tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+        kotlinOptions {
+            jvmTarget = "17"
+            allWarningsAsErrors = false
+        }
     }
 }
 
